--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 273,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "0            576"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "int"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -297,7 +297,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "Other / Non-Disclosed               $50.19                  $4.56  "
       ]
      },
-     "execution_count": 278,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,18 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Purchase ID', 'SN', 'Age', 'Gender', 'Item ID', 'Item Name', 'Price',\n",
-       "       'Age Demographics', 'Age Ranges'],\n",
-       "      dtype='object')"
+       "Index(['Purchase ID', 'SN', 'Age', 'Gender', 'Item ID', 'Item Name', 'Price'], dtype='object')"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +681,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +854,7 @@
        "40+                           $3.19  "
       ]
      },
-     "execution_count": 347,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +992,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1152,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 352,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,17 +1167,18 @@
     "total_purchase_value_pop = purchase_data.groupby([\"Item ID\", \"Item Name\"])[\"Price\"].sum()\n",
     "\n",
     "# Create a summary data frame\n",
-    "summary_popular_items = pd.DataFrame({\"Purchase Count\": purchase_count_pop,\n",
+    "summary_of_items = pd.DataFrame({\"Purchase Count\": purchase_count_pop,\n",
     "                                    \"Item Price\": avg_item_price_pop,\n",
     "                                    \"Total Purchase Value\": total_purchase_value_pop})\n",
     "\n",
     "# Sort the purchase count column in descending order\n",
-    "summary_popular_items = summary_popular_items.sort_values(\"Purchase Count\", ascending=False).head()\n",
+    "summary_popular_items = summary_of_items.sort_values(\"Purchase Count\", ascending=False)\n",
     "\n",
     "# Format\n",
     "summary_popular_items[\"Item Price\"] = summary_popular_items[\"Item Price\"].map(\"${:,.2f}\".format)\n",
     "summary_popular_items[\"Total Purchase Value\"] = summary_popular_items[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
-    "summary_popular_items"
+    "\n",
+    "summary_popular_items.head()\n"
    ]
   },
   {
@@ -1205,126 +1204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Item Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <th>Final Critic</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$4.61</td>\n",
-       "      <td>$59.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
-       "      <td>12</td>\n",
-       "      <td>$4.23</td>\n",
-       "      <td>$50.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <th>Fiery Glass Crusader</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$4.58</td>\n",
-       "      <td>$41.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$3.53</td>\n",
-       "      <td>$31.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <th>Persuasion</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$3.22</td>\n",
-       "      <td>$28.99</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                      Purchase Count  \\\n",
-       "Item ID Item Name                                                      \n",
-       "92      Final Critic                                              13   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
-       "145     Fiery Glass Crusader                                       9   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
-       "132     Persuasion                                                 9   \n",
-       "\n",
-       "                                                     Item Price  \\\n",
-       "Item ID Item Name                                                 \n",
-       "92      Final Critic                                      $4.61   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
-       "145     Fiery Glass Crusader                              $4.58   \n",
-       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
-       "132     Persuasion                                        $3.22   \n",
-       "\n",
-       "                                                     Total Purchase Value  \n",
-       "Item ID Item Name                                                          \n",
-       "92      Final Critic                                               $59.99  \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "145     Fiery Glass Crusader                                       $41.22  \n",
-       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  \n",
-       "132     Persuasion                                                 $28.99  "
-      ]
-     },
-     "execution_count": 353,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Sort the above table by total purchase value in descending order\n",
-    "summary_popular_items.sort_values(\"Total Purchase Value\", ascending=False)\n",
-    "summary_popular_items2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
@@ -1401,13 +1282,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "92      Final Critic                                             13   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "82      Nirvana                                                   9   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "103     Singed Scalpel                                            8   \n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "103     Singed Scalpel                                             8   \n",
        "\n",
        "                                                     Item Price  \\\n",
        "Item ID Item Name                                                 \n",
@@ -1426,11 +1307,29 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Sort the above table by total purchase value in descending order\n",
+    "summary_profitable_items = summary_of_items.sort_values([\"Total Purchase Value\"], ascending=False)\n",
+    "\n",
+    "#format\n",
+    "summary_profitable_items[\"Item Price\"] = summary_profitable_items[\"Item Price\"].map(\"${:,.2f}\".format)\n",
+    "summary_profitable_items[\"Total Purchase Value\"] = summary_profitable_items[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "summary_profitable_items.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
